# web3_node_core

./: Cargo.toml  LICENSE  README.md  http_endpoint.txt
src/: config.rs  main.rs  routes.rs  web3_client.rs
src/handlers/: mod.rs  wallet.rs
