[package]
name = "web3_node_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
ethers = { version = "2.0", features = ["rustls", "ws", "ipc"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
